--- a/less/_icon.less
+++ b/less/_icon.less
@@ -13,6 +13,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-garniture:before {
+  content: "\e909";
+}
 .icon-close:before {
   content: "\e908";
   color: #cec2bb;
