--- a/less/_popup.less
+++ b/less/_popup.less
@@ -85,6 +85,7 @@
     top: 20px;
     cursor: pointer;
     outline: none;
+    z-index: 2;
     
     &:hover {
         span {
@@ -329,6 +330,10 @@
     position: relative;
     overflow: hidden;
     margin-top: 10px;
+    
+    .portfolio-mobile__list {
+        display: none;
+    }
 }
 
 .portfolio-slider__list {
