--- a/less/_header.less
+++ b/less/_header.less
@@ -16,6 +16,10 @@
 
 .header__logo {
     height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
 }
 .header__list {
     display: flex;
@@ -72,6 +76,10 @@
         &:active {
             color: #cc6e22;
         }
+    }
+    
+    span {
+        display: none;
     }
 }
 
