--- a/less/_main_block.less
+++ b/less/_main_block.less
@@ -224,6 +224,8 @@
     font-size: 16px;
     margin: 45px 0px 20px;
     position: relative;
+    border: none;
+    background: none;
     
     &::before {
         content: "";
@@ -233,6 +235,35 @@
         width: 260px;
         height: 1px;
         background-color: #ababab;
+    }
+    
+    .cross {
+        display: none;
+        position: absolute;
+        right: 0px;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 10px;
+        height: 10px;
+        cursor: pointer;
+        transition: transform .4s;
+        
+        &::before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            background-color: #4c443f;
+        }
+        
+        &::after {
+            content: "";
+            position: absolute;
+            width: 2px;
+            height: 100%;
+            background-color: #4c443f;
+            transform: translateX(4px) translateY(-4px);
+        }
     }
 }
 .ou-works__img {
@@ -462,7 +493,7 @@
     margin-bottom: 15px;
     margin-top: 25px;
     
-    span {
+    .cross {
         position: absolute;
         right: 0px;
         top: 50%;
@@ -803,6 +834,9 @@
     }
 }
 
+.mobile-button__wrapper {
+    display: none;
+}
 .consultatin-bg {
     position: absolute;
     left: 0px;
@@ -823,7 +857,7 @@
         z-index: -1;
         display: inline-block;
         width: 100%;
-        padding-bottom: 150%; 
+        padding-bottom: 250%; 
         vertical-align: middle; 
         overflow: hidden; 
         
