--- a/less/_media-main-block.less
+++ b/less/_media-main-block.less
@@ -492,9 +492,9 @@
         &::after {
             top: -205px;
         }
-
+        
         &::before {
-            display: none;
+            bottom: -90px;
         }
     }
 
@@ -609,11 +609,12 @@
         margin-top: 100px;
         
         &::after {
-            top: -205px;
+            top: -185px;
         }
-
+        
         &::before {
-            display: none;
+            bottom: -85px;
+            z-index: 2;
         }
     }
 
@@ -687,12 +688,12 @@
         background-color: #fff;
         overflow: hidden;
         overflow-y: scroll;
-        padding-bottom: 50px;
+        padding-bottom: 35px;
     }
 
     .popup__portfolio-arrow {
         top: initial;
-        bottom: 10px;
+        bottom: -30px;
         transform: none;
 
         &:hover {
@@ -704,7 +705,7 @@
         
         span {
             color: #000;
-            font-size: 26px;
+            font-size: 20px;
         }
 
         &.prev {
@@ -861,24 +862,52 @@
     }
 
     .main_caption {
-        font-size: 32px;
+        font-size: 34px;
         line-height: 46px;
+        margin-bottom: 15px;
     }
 
     .description-block {
         display: none;
     }
     
+    .general__list {
+        line-height: 26px;
+    }
+    
     /* /General */
 
     /* Header */
+    
+    .header {
+        margin-top: 15px;
+    }
 
     .header__call-back {
         a {
             font-size: 14px;
         }
+        
+        .header__call-back__button {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 50px;
+            height: 50px;
+            background-color: rgb(244, 237, 232);
+            box-shadow: 0px 2px 16px 0px rgba(0, 0, 0, 0.15);
+            
+            p {
+                display: none;
+            }
+            span {
+                display: flex;
+                font-size: 25px;
+            }
+        }
+        
     }
-
+    
     /* Header */
 
     /* Main block */
@@ -916,17 +945,165 @@
         bottom: 120px;
     }
 
-    /* Main-block */
+    /* /Main-block */
+    
+    /* Our works */
+    
+    .our-works {
+        padding-top: 140px;
+    }
+    
+    .our-works__wrapper {
+        padding-bottom: 205px;
+        
+         .word-decor {
+             font-size: 300px;
+             line-height: 300px;
+             top: -185px;
+         }
+    }
+    
+    .our-works__caption {
+        width: 260px;
+        margin: 0px 0px 30px;
+        text-align: left;
+        
+        .cross {
+            display: flex;
+            margin-top: 3px;
+        }
+        
+        &.active {
+            + .our-works__list { 
+                opacity: 1;
+                transition: opacity .4s;
+                z-index: 5;
+                
+                &:last-of-type {
+                    z-index: 4;
+                }
+            }
+            
+            .cross {
+                transform: rotate(45deg) translateX(-50%) translateY(-2px);
+                
+                &::before,
+                &::after {
+                    background-color: #f3ad74;
+                }
+            }
+        }
+    }
+    .our-works__block {
+        .ou-works__img {
+            width: 325px;
+            height: 600px;
+            left: -15px;
+        
+            &::before {
+                width: 190px;
+                height: 580px;
+                bottom: -35px;
+            }
+        }
+        
+        &:nth-child(2) {
+            margin: 215px 0px 190px;
+            
+            .our-works__list {
+                left: initial;
+                right: 0px;
+            }
+            
+            .ou-works__img {
+                left: initial;
+                right: -15px;
+            }
+        }
+        
+        .main_caption {
+            left: -15px;
+            text-align: left;
+        }
+        
+        .our-works__list-wrapper{
+            right: initial;
+            left: 0px;
+            top: initial;
+            bottom: -165px;
+            
+            &:before {
+                display: none;
+            }
+        }
+    } 
+    
+    .our-works__list {
+        position: absolute;
+        overflow: hidden;
+        top: 20px;
+        width: 290px;
+        max-height: 185px;
+        background: #fff;
+        left: 0px;
+        padding: 20px;
+        border: 1px solid #cdcdcd;
+        opacity: 0;
+        z-index: -1;
+        
+        &:last-of-type {
+            top: 75px;
+        }
+    }
+    
+    .our-works__button {
+        .main-button {
+            margin: 0 auto;
+            max-width: 320px;
+        }
+    }
+    
+    /* /Our works */
+    
+    /* Offers block */
+    
+    .offers-block {
+        margin-top: -70px;
+    }
+    
+    .offers-block__wrapper {
+        padding-top: 80px;
+    }
+    
+    .offers-block {
+        .svg-decor {
+            .top-line {
+                height: 14px;
+            }
 
+            .decor-bg {
+                transform: translateY(12px);
+            }
+
+            .offer-decor-bg {
+                top: 11%;
+            }
+        }
+    }
+    
     /* Our project */
-
+    
+    .our-project {
+        padding-bottom: 130px;
+    }
+    
     .our-project__slider {
         right: -700px;
     }
 
     .our-project__wrapper {
         .general__list {
-            margin-bottom: 30px;
+            margin: 15px 0px 30px;
         }
     }
 
@@ -937,22 +1114,462 @@
             transform: translateY(-45%);
         }
     }
-    /* Offers */
-
-
-    .offers-block {
+    
+    /* /Our project */
+    
+    /* Consultation */
+    
+    .consultation {
+        align-items: flex-start;
+        height: 710px;
+        margin-bottom: 80px;
+    }
+    
+    .mobile-button__wrapper {
+        width: 330px;
+        display: block;
+        padding: 30px;
+        background-color: #fff;
+        box-shadow: 0px 0px 30px 0px rgba(76, 68, 63, 0.15);
+        margin-top: -20px;
+        
+        .main-form__caption {
+            margin-bottom: 10px;
+        }
+    }
+    
+    .consultation__wrapper {
+        margin-top: 70px;
+        
+        .main-form {
+            display: none;
+        }
+        
+        .general__list {
+            margin: 15px 0px 50px;
+            text-align: justify;
+        }
+        
+        &::after {
+            top: -130px;
+        }
+        
+        .main_caption {
+            margin-bottom: 15px;
+        }
+    }
+    .main-form__caption {
+        font-size: 24px;
+    }
+    
+    .consultatin-bg {
         .svg-decor {
-            .top-line {
-                height: 10px;
+            .text {
+                font-size: 85px;
+                transform: translate(calc(50% - 46px), calc(50% - 30px));
             }
+        }
+    }
+    
+    /* /Consultation */
+    
+    /* Furniture */
+    
+    .buy-furniture {
+        padding-bottom: 75px;
+    }
+    
+    .buy-furniture__description {
+        .general__list {
+            margin-top: 15px;
+        }
+    }
+    
+    .buy-furniture__img {
+        width: 310px;
+        height: 375px;
+        margin-bottom: 50px;
+        
+        &::before {
+            width: 215px;
+            height: 325px;
+            bottom: -30px;
+            right: -30px;
+        }
+        
+        .word-decor {
+            font-size: 250px;
+            line-height: 250px;
+            top: -20%;
+            left: -40px;
+        }
+    }
+    
+    .buy-furniture__list {
+        flex-direction: column;
+        margin-right: 0px;
+    }
+    
+    .buy-furniture__item {
+        width: 100%;
+        margin-right: 0px;
+        margin-bottom: 55px;
+        
+        &:last-child {
+            margin-bottom: 0px;
+        }
+    }
+    
+    /* /Furniture */
+    
+    /* Implementation */
+    
+    .implementation__slider-list {
+        width: 360px;
+        height: 375px;
+    }
+    
+    .implementation__slider-img.range {
+        .implemetation__slider-name {
+            left: 10px;
+        }
+    }
+    
+    .implemetation__slider-name {
+        font-size: 16px;
+        padding: 15px 20px;
+        right: 10px;
+        
+        p {
+            min-width: 115px;
+        }
+    }
+    
+    .implementation__description {
+        margin-bottom: 60px;
+        padding-top: 60px;
+        
+        .word-decor {
+            font-size: 525px;
+            line-height: 500px;
+            left: -30px;
+            top: -70px;
+        }
+        
+        .main_caption {
+            max-width: 100%;
+            text-align: left;
+        }
+        
+        .general__list {
+            margin: 15px 0px;
+        }
+        
+        &::before {
+            height: 500px;
+            top: 0px;
+            transform: translateX(-50%);
+        }
+    }
+    
+    /* /Implementation */
+    
+    /* Main-form */
+    
+    .form-block {
+        height: 585px;
+        align-items: flex-start;
+        
+        .main-form__caption {
+            line-height: 26px;
+        }
+        
+        .general__list {
+            margin: 0px 0px 15px;
+        }
+        
+        .mobile-button__wrapper {
+            margin-top: 55px;
+            
+            &::after {
+                top: -150px;
+            }
+        }
+        
+        .main-form__caption {
+            margin-bottom: 25px;
+        }
+    }
+    
+    .main-form__wrapper {
+        display: none;
+    }
+    
+    .form-block-bg {
+        height: 520px;
+        
+        .svg-decor {
+            .text {
+                font-size: 90px;
+                transform: translate(calc(50% - 28px), calc(50% - 25px));
+            }
+        }
+    }
+    
+    .form-block__wrapper {
+        margin-top: 90px;
+        
+        &::after {
+            top: -150px;
+        }
+        
+        .main_caption {
+            margin-bottom: 15px;
+        }
+    }
+    
+    /* /Main-form */
+    
+    /* Contact */
+        
+    .contact {
+        .contact-word {
+            top: 50%;
+            font-size: 400px;
+            line-height: 400px;
+        }
+    }
+    
+    .contact__list {
+        flex-direction: column;
+        margin-top: 45px;
+    }
+    
+    .contact__item {
+        margin-bottom: 20px;
+        font-size: 16px;
+        line-height: 26px;
+        width: 100% !important;
+        
+        &:last-child {
+            margin-bottom: 0px;
+        }
+    }
+    
+    /* /Contact */
+    
+    /* Popup */
+    
+    .popup__consultation {
+        .main-form {
+            width: 100%;
+            padding: 30px;
+        }
+        
+        .main-form-button__wrapper {
+            flex-direction: column;
+            
+            .main-button {
+                max-width: 100%;
+            }
+        }
+        
+        .main-form__file {
+            margin-bottom: 35px;
+            
+            button {
+                width: 100%;
+            }
+        }
+        
+        .main-form__title {
+            margin-top: 10px;
+        }
+    }
+    
+    .popup {
+        width: 100%;
+        
+        .main-form__square {
+            label {
+                width: calc(50% - 10px);
+            }
+        }
+        
+        .main-form__type {
+            label {
+                width: calc(50% - 10px);
+            }
+        }
+        
+        .main-input__wrapper {
+            width: 100%;
+            margin-bottom: 10px;
+            
+            &:last-child {
+                margin-bottom: 10px;
+            }
+            
+            .main-input {
+                width: 100%;
+            }
+        }
+        
+        .main-form__callback {
+            flex-wrap: wrap;
+        }
+    }
+    .popup__quiz {
+        .main-form__wrapper {
+            width: 100%;
+            display: block;
+            margin-top: 0px;
+        }
+        
+        .main-form__caption {
+            font-size: 27px;
+        }
+        
+        .main-form__counter {
+            font-size: 25px;
+            
+            .current {
+                font-size: 30px;
+            }
+        }
+        
+        .main-form__header {
+            margin-bottom: 20px;
+        }
+        
+        .main-form__title {
+            margin: 15px 0px 30px;
+        }
+        
+        .main-form {
+            padding: 20px;
+        }
+        
+        .main-form__button {
+            bottom: 20px;
+            padding: 0px 20px;
+        }
+        
+        .main-form__style {
+            .main-form__style-img {
+                width: 100%;
+                height: 77px;
+                
+                img {
+                    width: 100%;
+                    object-fit: cover;
+                }
+                
+            }
+            
+            > label {
+                width: calc(50% - 10px);
+            }
+            
+            span {
+                text-align: center;
+            }
+        }
+        
+        .main-form__button {
+            button {
+                width: calc(50% - 35px);
+                
+                &.next {
+                    right: 20px;
+                }
+                
+                 &.prev {
+                    left: 20px;
+                }
+            }
+            
+            .main-button {
+                right: 20px;
+            }
+        }
+    }
+    
+    .popup__caption {
+        font-size: 30px;
+    }
+    
+    .popup__call-back {
+        padding: 30px 40px 40px;
+    }
+    
+    .portfolio-slider__list {
+        display: none;
+    }
+    
+    .portfolio-slider__list__wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 50px;
+    }
+    
+    .portfolio-slider__list__wrapper {
+        .portfolio-mobile__list {
+            display: flex;
+            margin: 0px 70px;
+        }
+    }
+    
+    .portfolio-slider__arrow {
+        span {
+            font-size: 14px;
+        }
+    }
+    
+    .portfolio-mobile__item {
+        width: 10px;
+        height: 10px;
+        border: 1px solid #cdcdcd;
+        background-color: #fff;
+        margin-right: 10px;
+        
+        &.active {
+            border-color: #877f7a;
+            background-color: #f1f1f1;
+        }
+        
+        &:last-child {
+            margin-right: 0px;
+        }
+    }
+    
+    .popup__portfolio__wrapper {
+        .popup__portfolio-form {
+            width: 100%;
+            padding: 0px;
+            right: 0px;
+        }
+    }
+    /* /Popup */
+}
 
-            .decor-bg {
-                transform: translateY(12px);
+@media (max-width: 575px) {
+    .popup__quiz {
+        .main-form__caption {
+            font-size: 18px;
+        }
+        
+        .main-form__counter {
+            font-size: 18px;
+            
+            .current {
+                font-size: 20px;
             }
-
-            .offer-decor-bg {
-                top: 11%;
-            }
+        }
+        
+        .main-form__header {
+            margin-bottom: 10px;
         }
     }
 }
