--- a/css/autoprefixer/main.css
+++ b/css/autoprefixer/main.css
@@ -536,6 +536,9 @@ button {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.icon-garniture:before {
+  content: "\e909";
+}
 .icon-close:before {
   content: "\e908";
   color: #cec2bb;
@@ -595,6 +598,19 @@ button {
 }
 .header__logo {
   height: 60px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  font-size: 20px;
 }
 .header__list {
   display: -webkit-box;
@@ -655,6 +671,9 @@ button {
 }
 .header__call-back__button:hover:active {
   color: #cc6e22;
+}
+.header__call-back__button span {
+  display: none;
 }
 /* /Header */
 /* Main section */
@@ -2506,6 +2525,7 @@ button {
   top: 20px;
   cursor: pointer;
   outline: none;
+  z-index: 2;
 }
 .popup-close:hover span:before {
   color: #ababab;
@@ -2718,6 +2738,9 @@ button {
   position: relative;
   overflow: hidden;
   margin-top: 10px;
+}
+.portfolio-slider__list__wrapper .portfolio-mobile__list {
+  display: none;
 }
 .portfolio-slider__list {
   display: -webkit-box;
@@ -3376,11 +3399,11 @@ button {
     background-color: #fff;
     overflow: hidden;
     overflow-y: scroll;
-    padding-bottom: 50px;
+    padding-bottom: 35px;
   }
   .popup__portfolio-arrow {
     top: initial;
-    bottom: 10px;
+    bottom: -30px;
     -webkit-transform: none;
     transform: none;
   }
@@ -3391,7 +3414,7 @@ button {
   }
   .popup__portfolio-arrow span {
     color: #000;
-    font-size: 26px;
+    font-size: 20px;
   }
   .popup__portfolio-arrow.prev {
     left: calc(50% - 60px);
@@ -3527,8 +3550,40 @@ button {
   }
   /* /General */
   /* Header */
+  .header {
+    margin-top: 15px;
+  }
   .header__call-back a {
     font-size: 14px;
+  }
+  .header__call-back .header__call-back__button {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    background-color: #f4ede8;
+    -webkit-box-shadow: 0px 2px 16px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 2px 16px 0px rgba(0, 0, 0, 0.15);
+  }
+  .header__call-back .header__call-back__button p {
+    display: none;
+  }
+  .header__call-back .header__call-back__button span {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    font-size: 25px;
   }
   /* Header */
   /* Main block */
@@ -3881,27 +3936,9 @@ button {
   }
   /* /Contact */
   /* Popup */
-  .popup {
-    width: 100%;
-  }
   .popup__consultation .main-form {
     width: 100%;
     padding: 30px;
-  }
-  .popup__consultation .main-form__callback {
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-  }
-  .popup__consultation .main-input__wrapper {
-    width: 100%;
-    margin-bottom: 10px;
-  }
-  .popup__consultation .main-input__wrapper:last-child {
-    margin-bottom: 10px;
-  }
-  .popup__consultation .main-input__wrapper .main-input {
-    width: 100%;
   }
   .popup__consultation .main-form-button__wrapper {
     -webkit-box-orient: vertical;
@@ -3922,11 +3959,29 @@ button {
   .popup__consultation .main-form__title {
     margin-top: 10px;
   }
+  .popup {
+    width: 100%;
+  }
   .popup .main-form__square label {
     width: calc(50% - 10px);
   }
   .popup .main-form__type label {
     width: calc(50% - 10px);
+  }
+  .popup .main-input__wrapper {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .popup .main-input__wrapper:last-child {
+    margin-bottom: 10px;
+  }
+  .popup .main-input__wrapper .main-input {
+    width: 100%;
+  }
+  .popup .main-form__callback {
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
   }
   .popup__quiz .main-form__wrapper {
     width: 100%;
@@ -3951,5 +4006,103 @@ button {
   .popup__quiz .main-form {
     padding: 20px;
   }
+  .popup__quiz .main-form__button {
+    bottom: 20px;
+    padding: 0px 20px;
+  }
+  .popup__quiz .main-form__style .main-form__style-img {
+    width: 100%;
+    height: 77px;
+  }
+  .popup__quiz .main-form__style .main-form__style-img img {
+    width: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+  }
+  .popup__quiz .main-form__style > label {
+    width: calc(50% - 10px);
+  }
+  .popup__quiz .main-form__style span {
+    text-align: center;
+  }
+  .popup__quiz .main-form__button button {
+    width: calc(50% - 35px);
+  }
+  .popup__quiz .main-form__button button.next {
+    right: 20px;
+  }
+  .popup__quiz .main-form__button button.prev {
+    left: 20px;
+  }
+  .popup__quiz .main-form__button .main-button {
+    right: 20px;
+  }
+  .popup__caption {
+    font-size: 30px;
+  }
+  .popup__call-back {
+    padding: 30px 40px 40px;
+  }
+  .portfolio-slider__list {
+    display: none;
+  }
+  .portfolio-slider__list__wrapper {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    height: 50px;
+  }
+  .portfolio-slider__list__wrapper .portfolio-mobile__list {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0px 70px;
+  }
+  .portfolio-slider__arrow span {
+    font-size: 14px;
+  }
+  .portfolio-mobile__item {
+    width: 10px;
+    height: 10px;
+    border: 1px solid #cdcdcd;
+    background-color: #fff;
+    margin-right: 10px;
+  }
+  .portfolio-mobile__item.active {
+    border-color: #877f7a;
+    background-color: #f1f1f1;
+  }
+  .portfolio-mobile__item:last-child {
+    margin-right: 0px;
+  }
+  .popup__portfolio__wrapper .popup__portfolio-form {
+    width: 100%;
+    padding: 0px;
+    right: 0px;
+  }
   /* /Popup */
+}
+@media (max-width: 575px) {
+  .popup__quiz .main-form__caption {
+    font-size: 18px;
+  }
+  .popup__quiz .main-form__counter {
+    font-size: 18px;
+  }
+  .popup__quiz .main-form__counter .current {
+    font-size: 20px;
+  }
+  .popup__quiz .main-form__header {
+    margin-bottom: 10px;
+  }
 }
