--- a/css/main.css
+++ b/css/main.css
@@ -2460,7 +2460,10 @@ button {
     margin-right: -70px;
     margin-top: -30px;
     margin-left: -30px;
-    overflow-x: scroll;
+    overflow: scroll;
+  }
+  .offers-block__list::-webkit-scrollbar {
+    display: none;
   }
   /* /Offers */
   /* Our project */
