--- a/less/_media-main-block.less
+++ b/less/_media-main-block.less
@@ -113,7 +113,11 @@
         margin-right: -70px;
         margin-top: -30px;
         margin-left: -30px;
-        overflow-x: scroll;
+        overflow: scroll;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
     }
     
     /* /Offers */
